<resources>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_promise_explanation">"The app for this icon isn't installed. You can remove it, or search for the app and install it manually."</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_search">Search</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_error">"Couldn't connect"</string>
    <string name="abc_slice_more">More</string>
    <string name="abc_slice_more_content">+ %1$d</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slice_show_more">Show more</string>
    <string name="abc_slice_updated">Updated %1$s</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_app_usage_settings">App usage settings</string>
    <string name="accessibility_close">Close</string>
    <string name="accessibility_recent_apps">Recent apps</string>
    <string name="accessibility_rotate_button">Rotate screen</string>
    <string name="action_add_to_workspace">Add to home screen</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_deep_shortcut">Shortcuts</string>
    <string name="action_dismiss_notification">Dismiss</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_move">Move item</string>
    <string name="action_move_here">Move item here</string>
    <string name="action_move_to_workspace">Move to home screen</string>
    <string name="action_resize">Resize</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_share">Share</string>
    <string name="action_split">Split</string>
    <string name="activity_not_available">"App isn't available"</string>
    <string name="activity_not_found">"App isn't installed."</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold the widget to move it around the home screen</string>
    <string name="add_to_folder">Add to folder: %1$s</string>
    <string name="add_to_folder_with_app">Add to folder with %1$s</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="added_to_home_screen_accessibility_text">%1$s widget added to home screen</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_button_personal_label">Personal apps list</string>
    <string name="all_apps_button_work_label">Work apps list</string>
    <string name="all_apps_label">All apps</string>
    <string name="all_apps_loading_message">Loading apps…</string>
    <string name="all_apps_no_search_results">No apps found matching \"%1$s\"</string>
    <string name="all_apps_options_menu_rearrange">Rearrange</string>
    <string name="all_apps_options_menu_rearrange_exit">Exit</string>
    <string name="all_apps_options_menu_sort_apps">Sort apps</string>
    <string name="all_apps_personal_tab">Personal</string>
    <string name="all_apps_prediction_tip">Your predicted apps</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="all_apps_search_results">Search results</string>
    <string name="all_apps_sort_mode_alphabetical">By name</string>
    <string name="all_apps_sort_mode_own_order">Own order</string>
    <string name="all_apps_work_tab">Work</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="allow_rotation_title">Allow home screen rotation</string>
    <string name="allset_description">You’re ready to start using your phone</string>
    <string name="allset_description_tablet">You’re ready to start using your tablet</string>
    <string name="allset_hint">Swipe up to go Home</string>
    <string name="allset_navigation_settings"><annotation id="link">System navigation settings</annotation></string>
    <string name="allset_title">All set!</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_downloading_title">%1$s downloading, %2$s complete</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="app_installing_title">%1$s installing, %2$s complete</string>
    <string name="app_launch_tracker_class">com.android.launcher3.appprediction.PredictionAppTracker</string>
    <string name="app_name">Launcher3</string>
    <string name="app_waiting_download_title">%1$s waiting to install</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="assistant_gesture_feedback_swipe_not_diagonal">Make sure you swipe diagonally.</string>
    <string name="assistant_gesture_feedback_swipe_not_long_enough">Try swiping further.</string>
    <string name="assistant_gesture_feedback_swipe_too_far_from_corner">Make sure you swipe from a bottom corner of the screen.</string>
    <string name="assistant_gesture_tutorial_playground_subtitle">Try swiping diagonally from a bottom corner of the screen</string>
    <string name="assistant_gesture_tutorial_playground_title">Tutorial: Assistant</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="auto_add_shortcuts_label">Add app icons to home screen</string>
    <string name="back_gesture_feedback_cancelled">Make sure you swipe from the right or left edge to the middle of the screen and let go.</string>
    <string name="back_gesture_feedback_complete_with_overview_follow_up">You learned how to swipe from the right to go back. Next up, learn how to switch apps.</string>
    <string name="back_gesture_feedback_complete_without_follow_up">You completed the go back gesture.</string>
    <string name="back_gesture_feedback_swipe_in_nav_bar">"Make sure you don't swipe too close to the bottom of the screen."</string>
    <string name="back_gesture_feedback_swipe_too_far_from_edge">Make sure you swipe from the far-right or far-left edge.</string>
    <string name="back_gesture_intro_subtitle">To go back to the last screen, swipe from the left or right edge to the middle of the screen.</string>
    <string name="back_gesture_intro_title">Swipe to go back</string>
    <string name="back_gesture_spoken_intro_subtitle">To go back to the last screen, swipe with 2 fingers from the left or right edge to the middle of the screen.</string>
    <string name="back_gesture_tutorial_confirm_subtitle">To change the sensitivity of the back gesture, go to Settings</string>
    <string name="badge_max_count_format">%1$d+</string>
    <string name="blocked_by_policy">This action is not allowed</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cache_db_name">app_icons.db</string>
    <string name="calendar_component_name" />
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="developer_options_title">Developer Options</string>
    <string name="gesture_tutorial_action_button_label_cancel">Cancel</string>
    <string name="gesture_tutorial_action_button_label_skip">Skip</string>
    <string name="hotseat_edu_accept">Get app suggestions</string>
    <string name="hotseat_edu_dismiss">No thanks</string>
    <string name="hotseat_edu_message_migrate">Easily access your most-used apps right on the Home screen. Suggestions will change based on your routines. Apps on the bottom row will move up to your Home screen.</string>
    <string name="hotseat_edu_title_migrate">Get app suggestions on the bottom row of your Home screen</string>
    <string name="msg_search">Show quick search box at the bottom of the home screen</string>
    <string name="notification_dots_title">Notification dots</string>
    <string name="pref_show_google_now_summary">@string/msg_minus_one_on_left</string>
    <string name="recents_action_multi_window_switch">Multi-window switch</string>
    <string name="recents_action_popup_window">Pop-up window</string>
    <string name="recents_clear_all">Clear all</string>
    <string name="skip_tutorial_dialog_subtitle">You can find this later in the %1$s app</string>
    <string name="skip_tutorial_dialog_title">Skip navigation tutorial?</string>
    <string name="taskbar_edu_close">Close</string>
    <string name="taskbar_edu_next">Next</string>
    <string name="taskbar_edu_splitscreen">Drag to the side to use two apps at once</string>
    <string name="taskbar_edu_stashing">Touch &amp; hold to hide the taskbar</string>
    <string name="taskbar_edu_switch_apps">Use the taskbar to switch apps</string>
    <string name="title_show_google_app">Show Google™ App</string>
    <string name="title_show_search">Show quick search box</string>
    <string name="widget_education_close_button">Got it</string>
    <string name="widget_education_content">To get info without opening apps, you can add widgets to your home screen</string>
    <string name="widget_education_header">Useful info at your fingertips</string>
    <string name="work_apps_enable_btn_text">Turn on work apps</string>
    <string name="work_apps_paused_body">Your work apps can’t send you notifications, use your battery, or access your location</string>
    <string name="work_apps_paused_title">Work apps are paused</string>
</resources>