<?xml version="1.0" encoding="utf-8"?>
<com.android.launcher3.allapps.WorkPausedCard android:gravity="center_horizontal" android:orientation="vertical" android:padding="@dimen/work_edu_card_margin" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="?workProfileOverlayTextColor" android:id="@id/work_apps_paused_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/work_apps_paused_title" android:textAlignment="center" style="@style/PrimaryHeadline" />
    <TextView android:textSize="14.0sp" android:textColor="?android:textColorSecondary" android:id="@id/work_apps_paused_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="24.0dip" android:text="@string/work_apps_paused_body" android:textAlignment="center" />
    <Button android:textSize="14.0sp" android:textColor="?workProfileOverlayTextColor" android:id="@id/enable_work_apps" android:background="@drawable/rounded_action_button" android:layout_width="wrap_content" android:layout_height="@dimen/rounded_button_height" android:text="@string/work_apps_enable_btn_text" android:textAlignment="center" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
</com.android.launcher3.allapps.WorkPausedCard>