<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/bg_sandbox_feedback" android:paddingTop="24.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/gesture_tutorial_dialog_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/skip_tutorial_dialog_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextAppearance.GestureTutorial.Dialog.Title" />
    <TextView android:id="@id/gesture_tutorial_dialog_subtitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/skip_tutorial_dialog_subtitle" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/gesture_tutorial_dialog_title" style="@style/TextAppearance.GestureTutorial.Dialog.Subtitle" />
    <Button android:id="@id/gesture_tutorial_dialog_cancel_button" android:background="@drawable/gesture_tutorial_cancel_button_background" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="46.0dip" android:foreground="?android:selectableItemBackgroundBorderless" android:text="@string/gesture_tutorial_action_button_label_cancel" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" android:stateListAnimator="@null" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/gesture_tutorial_dialog_subtitle" style="@style/TextAppearance.GestureTutorial.CancelButtonLabel" />
    <Button android:id="@id/gesture_tutorial_dialog_confirm_button" android:background="@drawable/gesture_tutorial_action_button_background" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="46.0dip" android:foreground="?android:selectableItemBackgroundBorderless" android:text="@string/gesture_tutorial_action_button_label_skip" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" android:stateListAnimator="@null" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/gesture_tutorial_dialog_subtitle" style="@style/TextAppearance.GestureTutorial.ButtonLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>