<?xml version="1.0" encoding="utf-8"?>
<com.android.launcher3.taskbar.TaskbarEduView android:gravity="bottom" android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="108.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:launcher="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:gravity="center_horizontal" android:id="@id/edu_view" android:background="@drawable/bg_rounded_corner_bottom_sheet" android:paddingTop="64.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="36.0dip">
        <com.android.launcher3.taskbar.TaskbarEduPagedView android:id="@id/content" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="378.0dip" launcher:layout_constraintTop_toTopOf="parent" launcher:pageIndicator="@id/content_page_indicator">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/page_switch_apps" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/taskbar_edu_switch_apps" style="@style/TextAppearance.TaskbarEdu.Title" />
                <ImageView android:layout_width="322.0dip" android:layout_height="282.0dip" android:layout_marginTop="16.0dip" android:src="@drawable/taskbar_edu_switch_apps" />
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/page_splitscreen" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/taskbar_edu_splitscreen" style="@style/TextAppearance.TaskbarEdu.Title" />
                <ImageView android:layout_width="322.0dip" android:layout_height="282.0dip" android:layout_marginTop="16.0dip" android:src="@drawable/taskbar_edu_splitscreen" />
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/page_stashing" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/taskbar_edu_stashing" style="@style/TextAppearance.TaskbarEdu.Title" />
                <ImageView android:layout_width="322.0dip" android:layout_height="282.0dip" android:layout_marginTop="16.0dip" android:src="@drawable/taskbar_edu_stashing" />
            </LinearLayout>
        </com.android.launcher3.taskbar.TaskbarEduPagedView>
        <Button android:textColor="?android:textColorPrimary" android:id="@id/edu_start_button" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_marginTop="32.0dip" android:layout_marginBottom="92.0dip" android:text="@string/taskbar_edu_close" launcher:layout_constraintBottom_toBottomOf="parent" launcher:layout_constraintStart_toStartOf="parent" launcher:layout_constraintTop_toBottomOf="@id/content" style="@style/TaskbarEdu.Button.Close" />
        <com.android.launcher3.pageindicators.PageIndicatorDots android:id="@id/content_page_indicator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:elevation="1.0dip" launcher:layout_constraintBottom_toBottomOf="@id/edu_start_button" launcher:layout_constraintEnd_toEndOf="parent" launcher:layout_constraintStart_toStartOf="parent" launcher:layout_constraintTop_toTopOf="@id/edu_start_button" />
        <Button android:textColor="?android:^attr-private/textColorOnAccent" android:id="@id/edu_end_button" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/taskbar_edu_next" launcher:layout_constraintBottom_toBottomOf="@id/edu_start_button" launcher:layout_constraintEnd_toEndOf="parent" launcher:layout_constraintTop_toTopOf="@id/edu_start_button" style="@style/TaskbarEdu.Button.Next" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.android.launcher3.taskbar.TaskbarEduView>