<?xml version="1.0" encoding="utf-8"?>
<com.android.launcher3.hybridhotseat.HotseatEduDialog android:gravity="bottom" android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:launcher="http://schemas.android.com/apk/res-auto">
    <View android:background="@drawable/bottom_sheet_top_border" android:layout_width="fill_parent" android:layout_height="32.0dip" android:backgroundTint="?eduHalfSheetBGColor" />
    <LinearLayout android:orientation="vertical" android:background="?eduHalfSheetBGColor" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/hotseat_edu_heading" android:paddingLeft="@dimen/bottom_sheet_edu_padding" android:paddingRight="@dimen/bottom_sheet_edu_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="@string/hotseat_edu_title_migrate" android:fontFamily="google-sans" android:textAlignment="center" style="@style/TextHeadline" />
        <TextView android:textSize="16.0sp" android:textColor="@android:color/white" android:id="@id/hotseat_edu_content" android:paddingLeft="@dimen/bottom_sheet_edu_padding" android:paddingRight="@dimen/bottom_sheet_edu_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_marginBottom="18.0dip" android:text="@string/hotseat_edu_message_migrate" android:fontFamily="roboto-medium" android:textAlignment="center" />
        <LinearLayout android:orientation="vertical" android:id="@id/hotseat_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.android.launcher3.CellLayout android:id="@id/sample_prediction" android:layout_width="fill_parent" android:layout_height="0.0dip" launcher:containerType="hotseat" />
            <LinearLayout android:id="@id/button_container" android:paddingLeft="@dimen/bottom_sheet_edu_padding" android:paddingTop="8.0dip" android:paddingRight="@dimen/bottom_sheet_edu_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <FrameLayout android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.4">
                    <Button android:textColor="@android:color/white" android:layout_gravity="start|center" android:id="@id/no_thanks" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hotseat_edu_dismiss" />
                </FrameLayout>
                <FrameLayout android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.6">
                    <Button android:textColor="@android:color/white" android:layout_gravity="end|center" android:id="@id/turn_predictions_on" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hotseat_edu_accept" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.android.launcher3.hybridhotseat.HotseatEduDialog>